--- a/.github/workflows/runOnGitHub.yml
+++ b/.github/workflows/runOnGitHub.yml
@@ -6,7 +6,7 @@ name: my_msvc_CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ portable_config ]
     tags: [ v*]
   pull_request:
     branches: [ main ]
