--- a/.github/workflows/runOnGitHub.yml
+++ b/.github/workflows/runOnGitHub.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Build something requiring CL.EXE
         working-directory: ./windows
         run: |
+          mkfiles.pl
           dir
           nmake -f Makefile.vc
 
