--- a/.github/workflows/runOnGitHub.yml
+++ b/.github/workflows/runOnGitHub.yml
@@ -37,8 +37,10 @@ jobs:
 # Enable Developer Command Prompt
       - uses: ilammy/msvc-dev-cmd@v1
       - name: Build something requiring CL.EXE
-        working-directory: windows
+        working-directory: ./windows
         run: |
+          cd ./windows
+          dir
           nmake -f Makefile.vc
 
         # Example use of `signedReleaseFile` output -- not needed
