--- a/.github/workflows/runOnGitHub.yml
+++ b/.github/workflows/runOnGitHub.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build something requiring CL.EXE
         working-directory: ./windows
         run: |
-          ./mkfiles.pl
+          perl mkfiles.pl
           dir
           nmake -f Makefile.vc
 
