--- a/.github/workflows/runOnGitHub.yml
+++ b/.github/workflows/runOnGitHub.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Build something requiring CL.EXE
         run: |
           cd windows
+          dir
           nmake -f Makefile.vc
 
         # Example use of `signedReleaseFile` output -- not needed
