--- a/.github/workflows/runOnGitHub.yml
+++ b/.github/workflows/runOnGitHub.yml
@@ -46,8 +46,8 @@ jobs:
         # Example use of `signedReleaseFile` output -- not needed
       - uses: actions/upload-artifact@v2
         with:
-          name: Signed app bundle
-          path: ${{steps.sign_app.outputs.signedReleaseFile}}
+          name: upload-artifact
+          path: windows/*.exe
 
       - name: Get the tag name
         run: echo "TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
